--- a/css/inc/_media_queries.scss
+++ b/css/inc/_media_queries.scss
@@ -168,8 +168,9 @@
 		}
 	}
 	#content.resume {
-		width: 50%;
+		width: 55%;
 		padding-left: 10px;
+		max-width: 650px;
 		.section {
 			.right {
 				width: 85%;
