--- a/css/inc/_variables.scss
+++ b/css/inc/_variables.scss
@@ -5,4 +5,8 @@ $grey_light: #f8f8f8;
 
 $sans_family: 'Dosis', Helvetica, Verdana, sans-serif;
 
-$DEBUG: true;
+$DEBUG: false;
+
+// print
+$print_sans: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$print_serif: Palatino, Georgia,'Times New Roman',serif;
