--- a/css/inc/_print.scss
+++ b/css/inc/_print.scss
@@ -1,11 +1,78 @@
 @media print {
-	h1, h2, h3,  h4, h5, h6 {
-		font-family: $print_sans;
+    html {
+    	width:8.5in;
+    }
+
+    body {
+    	font-size: 10pt !important;
+    	line-height: 1.8;
+		color: #000;
+		margin: 50px;
+		// line-height: 1.35;
 	}
+
+	h3 {
+		font-family: $print_sans;
+		margin: 0;
+		// font-weight: bold !important;
+	}
+	a, a:visited {
+		text-decoration: none;
+		color: #000;
+	}
+
 	p, ul {
 		font-family: $print_serif;
+		margin: 0;
 	}
-	#share_menu, #to_top, aside, #global {
+	#share_menu, #to_top, aside, #global, header {
 		display: none;
 	}
+
+	#print_header {
+		// display: inline;
+		float: left;
+		width: 15%;
+		margin-top: 10px;
+	}
+
+	#content {
+		width: 85%;
+		float: right;
+	}
+
+	.left, .right {
+		margin: 0;
+	}
+
+	.left {
+		width: 17%;
+		float: left;
+		text-align: right;
+		h3 {
+			padding-right: 10px;
+		}
+	}
+	.right {
+		width: 83%;
+		float: right;
+		&.skills {
+			ul {
+				float: left;
+				width: 48%;
+			}
+		}
+		.company {
+			float: left;
+		}
+		.position {
+			float: left;
+			width: 100%;
+		}
+		.date {
+			float: right;
+		}
+	}
+
+
 }
