--- a/css/inc/_print.scss
+++ b/css/inc/_print.scss
@@ -5,16 +5,15 @@
 
     body {
     	font-size: 10pt !important;
-    	line-height: 1.8;
 		color: #000;
 		margin: 50px;
-		// line-height: 1.35;
+		line-height: 1.35;
 	}
 
 	h3 {
 		font-family: $print_sans;
-		margin: 0;
-		// font-weight: bold !important;
+		margin: 0 !important;
+		padding: 0 !important;
 	}
 	a, a:visited {
 		text-decoration: none;
@@ -30,13 +29,14 @@
 	}
 
 	#print_header {
-		// display: inline;
+		display: inline;
 		float: left;
 		width: 15%;
 		margin-top: 10px;
 	}
 
 	#content {
+		margin-top: -100px;
 		width: 85%;
 		float: right;
 	}
