* added github info to about page * styled github info * disabled ruby notification

--- a/css/inc/_main.scss
+++ b/css/inc/_main.scss
@@ -99,6 +99,13 @@ header {
 		}
 	}
 
+	.repo {
+		list-style-type: none;
+		.repo-updated {
+			margin-top: 0;
+		}
+	}
+
 	&.resume {
 		.section {
 			padding-bottom: 20px;
