--- a/css/style.scss
+++ b/css/style.scss
@@ -1,10 +1,10 @@
 /*
-Theme Name: alexmejias2
-Theme URI: http://wordpress.org/extend/themes/twentyeleven
-Description: my test theme
-Author: the WordPress team
-Author URI: http://alexismejias.com/
-Version: 1.3
+Theme Name: alexmejias
+Theme URI: http://alex-mejias.com
+Description: my personal portfolio theme
+Author: Alex Mejias
+Author URI: http://alex-mejias.com/
+Version: 1.0
 -------------------------------------------------------------- */
 @import 'inc/variables';
 @import 'inc/normalize';
