--- a/css/inc/_main.scss
+++ b/css/inc/_main.scss
@@ -156,6 +156,8 @@ header {
 	text-align: center;
 	ul {
 		li {
+			-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+			-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.2);
 			box-shadow: 0 1px 3px rgba(0,0,0,0.2);
 			background: $grey_light;
 			margin: 3px;
